Closed
Bug 227129
Opened 22 years ago
Closed 21 years ago
Radio buttons for software agreement agree/disagree broken
Categories
(Firefox :: Installer, defect)
Tracking
()
VERIFIED
FIXED
Firefox0.9
People
(Reporter: robertjm, Assigned: bugs)
References
Details
Attachments
(1 file, 2 obsolete files)
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6b) Gecko/20031130 Firebird/0.7+
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6b) Gecko/20031130 Firebird/0.7+
When running the installer the user agreement (software licensing agreement)
option should default to the negative option, and require someone to change it
to the positive. Current installer build defaults to positive.
Reproducible: Always
Steps to Reproduce:
1. Download 20031130 FirebirdSetup.exe installer
2. Run installer program
Actual Results:
When you reach the Software Licensing Agreement page it defaults to "I accept..."
Expected Results:
This should default to the negative, and require the user to choose the positive
(i.e.: "I do not accept..." should be the default).
Does NOT affect functionality one bit. Its a legaleze issue worth mentioning.
Comment 1•22 years ago
|
||
yeah, its a minor thing, but should be done before the installer appears in a
milestone
Severity: trivial → normal
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: blocking0.8?
Disclaimer: I don't have the ability to build the next-gen installer on this
machine as I do not have access to MSVC++. Therefore this is untested. That
said, to the best of my understanding this patch should sucecssfully make this
trivial change.
Comment on attachment 136619 [details] [diff] [review]
Proposed patch
Asking for review from Ben.
Attachment #136619 -
Flags: review?(bugs)
Ugh, I'm sorry, I missed the obvious change to the comment. Please disregard
the last patch. These are among the first patches I've ever submitted to an
open source project, so I apologize for these lame newbie mistakes...
Attachment #136619 -
Attachment is obsolete: true
Attachment #136619 -
Flags: review?(bugs)
Comment on attachment 136620 [details] [diff] [review]
Patch v2
Re-requesting review of the correct patch.
Attachment #136620 -
Flags: review?(bugs)
| Assignee | ||
Comment 6•22 years ago
|
||
Why is this a legal issue? We provide both options. Checking the other button
makes the installation more time consuming. Who are we kidding... no one ever
reads these things. We've provided it here, I think that's enough. Seamonkey
does the same thing, places a button at the same physical location that accepts
the agreement.
| Reporter | ||
Comment 7•22 years ago
|
||
Every commercial software company I have ever been involved with has made it a
habit of making it the negative by default. Sure, nobody probably reads them
(myself included), but the fact that the user has to do a simple keystroke to be
able to install the software is the user's acknowledgement that they accept
whatever the wording states, whether they read it or not. Should a legal issue
ever happen, then the fact that the software did not require someone to
physically choose to accept it could be brought up.
A negative default is the norm in the software industry.
| Assignee | ||
Comment 8•22 years ago
|
||
Bah.
Flags: blocking0.8? → blocking0.8+
Target Milestone: --- → Firebird0.8
| Assignee | ||
Comment 9•22 years ago
|
||
After talking with my lawyers, I've decided to take this for now. I think an
"Accept" button would be better though... will look at that later.
| Assignee | ||
Comment 10•22 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 11•22 years ago
|
||
Installed with new 20031216 installer build. While the default has been changed
to the "I do not accept...", the Next button is available, and you can continue
with the installation without having to change the negative default to the "I
accept..." positive choice. The Next button should be grayed out until the
option is changed to the "I accept..." option.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 12•22 years ago
|
||
Fixed, branch and trunk. The reason this wasn't working is that the tab order in
the dialog resource was wrong, and the ACCEPT radio was being focused when the
dialog initialized, thus causing the WM_COMMAND to be sent for some reason.
Status: REOPENED → RESOLVED
Closed: 22 years ago → 22 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 13•22 years ago
|
||
No, not fixed. God damnit.
Windows blows. CENSORED.
-> 0.9
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Target Milestone: Firebird0.8 → Firebird0.9
Comment 14•22 years ago
|
||
Just for the record, I've never defaulted to "I do not accept" in my Texturizer
installer. It's still the user's choice. Nevermind though, since it's already
"fixed".
| Reporter | ||
Comment 15•22 years ago
|
||
Just installed what's labeled as the latest installer build. When it gets to the
EULA, both the "I accept..." and I do not accept..." radio buttons are selected,
and the OK button is grayed out. If I click on the "I accept..." radio button
then the OK button is available, though both radio buttons look like they are
chosen (i.e.: the black dots are there!).
I can bounce back and forth between the two radio buttons, and the OK button
matches whichever one that I clicked on, so the button is interlocked properly.
Its just that both options look like they are chosen.
What's strange is that the version info still says 20031216 build, and the logo
in the HELP|ABOUT has changed.
Here's the complete build designation in the browswer:
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6b) Gecko/20031216
Firebird/0.7+
Comment 16•22 years ago
|
||
regarding the legality of this issue, I only vaguely remember the details but
there was something in a US court in recent years whereby it was
discussed/decided/something that users weren't bound by the terms of the licence
if they just clicked a default 'ok' button, which is why licences with some
software, such as OpenOffice, gets you to scroll thru the text before the 'i
agree' button becomes usable.
I also read somewhere else, and remember only vaguely, that if users don't agree
with the GPL then they're instead bound by Copyright law, which is of-course
more restrictive than the GPL so we don't lose anything in that situation.
Where we do have the potential to lose out is with people changing/distributing
the code and I think perhaps the implication was that such people are faced with
acknowlwedging the licence agreement at a different point than this one included
with the installer
Comment 17•22 years ago
|
||
Comment on attachment 136620 [details] [diff] [review]
Patch v2
Canceling my review request based on the fact that this doesn't work...
Attachment #136620 -
Attachment is obsolete: true
Attachment #136620 -
Flags: review?(bugs)
Comment 18•22 years ago
|
||
Shouldn't TM be Firebird0.8 since it's blocker?
Comment 19•21 years ago
|
||
thegoldenear@connectfree.co.uk: that's nice, except mozilla isn't a GPL product.
Comment 20•21 years ago
|
||
*** Bug 231136 has been marked as a duplicate of this bug. ***
Comment 21•21 years ago
|
||
Defaults to Reject, but bug in comment 15 is there.
Should probably change summary.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7a) Gecko/20040120
Firebird/0.7+
Comment 22•21 years ago
|
||
changing flags per Ben's comment on IRC (and comment 13 when he should have
changed it anyway :)
Flags: blocking0.9?
Flags: blocking0.8-
Flags: blocking0.8+
Comment 23•21 years ago
|
||
Resummarizing bug to try and stop the dups appearing on this remaining issue.
Summary: software licensing agreement defaults to "I accept..." Should default to "I do not accept..." → Radio buttons for software agreement agree/disagree broken
Comment 24•21 years ago
|
||
*** Bug 236810 has been marked as a duplicate of this bug. ***
Comment 25•21 years ago
|
||
Comment 26•21 years ago
|
||
I just checked in the attached patch, are we done here, should this be marked FIXED?
Status: REOPENED → RESOLVED
Closed: 22 years ago → 21 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 27•21 years ago
|
||
Just tested with the 0204 installer build, and it works fine!!
| Reporter | ||
Comment 28•21 years ago
|
||
make that the April 2, 2004 installer build!
-----------------------
Just tested with the 0204 installer build, and it works fine!!(In reply to
comment #27)
> Just tested with the 0204 installer build, and it works fine!!
Updated•21 years ago
|
Flags: blocking0.9?
Updated•21 years ago
|
Status: RESOLVED → VERIFIED
Updated•19 years ago
|
QA Contact: bugzilla → installer
You need to log in
before you can comment on or make changes to this bug.
Description
•