bug 227129 - select "DECLINE" radio button by default in winstaller, patch by jhenry. <jhenry@ccs.neu.edu>